// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form input test Component set to textbox with little popup bubble 1`] = `
<div
  className="formInputOuterWrapper stgNoticable"
>
  <div
    className="formInputInnerWrapper"
  >
    <label
      className="formAndCardLabels"
      htmlFor="unameLabelBound"
    >
      Username area
    </label>
    <input
      className="formUnitInputGeneralStyle"
      id="unameLabelBound"
      name="username"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyPress={[MockFunction]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="textbox"
      value="stg"
    />
  </div>
  
</div>
`;

exports[`Form input test Component set to textbox without popup bubble 1`] = `
<div
  className="formInputOuterWrapper stgNoticable"
>
  <div
    className="formInputInnerWrapper"
  >
    <label
      className="formAndCardLabels"
      htmlFor="unameLabelBound"
    >
      Username area
    </label>
    <input
      className="formUnitInputGeneralStyle"
      id="unameLabelBound"
      name="username"
      onBlur={[Function]}
      onChange={[MockFunction]}
      onFocus={[Function]}
      onKeyPress={[MockFunction]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
      type="text"
      value="stg"
    />
  </div>
  
</div>
`;
